--- a/shared/styles/styles.css
+++ b/shared/styles/styles.css
@@ -731,6 +731,7 @@ div.checklist div.progressbar {
   background-position: -200vw -200vh;
   background-repeat: no-repeat;
   background-color: black;
+  overflow: hidden;
 }
 .swiper.swiper-main .swiper-slide::before {
   content: "";
